--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,10 @@
     "type": "library",
     "require": {
         "php": ">=5.3",
-        "php-curl-class/php-curl-class": "~3.0"
+        "php-curl-class/php-curl-class": "^3.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^4.8"
     },
     "autoload": {
         "classmap": ["PHP/JSONRPC2ClientSecure.php"]
